syntax = "proto3";

package calculator;

option go_package = "calculator-service/proto";

//- - - - - - -
//message defined for sum and product
message Input {
  int64 first_number = 1;
  int64 second_number = 2;
}

message Request{
  Input input = 1;
}

message Response{
  int64 result = 1;
}
//- - - - - - -
//message defined for server streaming for getting prime factors in stream
message InputDecomposition{
  int64 number = 1;
}

message RequestDecomposition{
  InputDecomposition input = 1;
}

message ResponseDecomposition{
  int64 prime_factor = 1;
}
//- - - - - - -
//message defined for client streaming for getting average
message Number{
  int64 num = 1;
}
message Average{
  double num = 1;
}
//- - - - - - -
service CalculatorService{
  rpc Sum(Request) returns (Response){};
  rpc Multiply(Request) returns(Response){};
  rpc PrimeDecomposition(RequestDecomposition) returns (stream ResponseDecomposition){};
  rpc AverageSvc(stream Number) returns (Average){}
}


